提交学习代码

--- a/awesome-python3-webapp/www/templates/test.html
+++ b/awesome-python3-webapp/www/templates/test.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Test users - Awesome Python Webapp</title>
+    <title>Python 工程</title>
 </head>
 <body>
-    <h1>All users</h1>
+    <h1>全部用户</h1>
     {% for u in users %}
     <p>{{ u.name }} / {{ u.email }}</p>
     {% endfor %}
